# proteinshake

./: .gitignore  .readthedocs.yml  LICENSE  README.md  README_pypi.md  pyproject.toml  release.py  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: build.yml  python-publish.yml  test.yml
docs/: CNAME  index.html  leaderboard.html  leaderboard.js  prism.css  prism.js  quickstart.html  quickstart.js  requirements.txt  script.js  style.css
docs/leaderboard/: gene_ontology.json
docs/readthedocs/: README.md  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  quickstart.rst  torch_pdb.datasets.rst  torch_pdb.rst  torch_pdb.utils.rst
docs/statistics/: BindingSiteDetectionTask.html  EnzymeClassTask.html  GeneOntologyTask.html  LigandAffinityTask.html  ProteinFamilyTask.html  StructuralClassTask.html  (+4 more)
examples/: README.md  load_datasets.py  sup_enzyme_commission_with_gnn.ipynb
leaderboard/: binding_site_detection.json  enzyme_class.json  enzyme_commission.json  gene_ontology.json  ligand_affinity.json  pfam.json  protein_family.json  scop.json  structural_class.json  structure_alignment.json
proteinshake/: __init__.py
release/: statistics.py
scripts/: dataset_table.py  get_tm_list.py  release.py  submit_release.sh  tmscore_precompute.py
test/: EnzymeClassTask.json
tests/: not_test_download.py  test_datasets.py  test_download.py  test_dummy.py  test_frameworks.py  test_preprocess.py  test_representations.py  test_tasks.py  test_transforms.py
torch_pdb/: __init__.py  dataset.py  pdbbind_refined.py  rcsb.py  tmscore_benchmark.py
(+181 files in other folders)
