[metadata]
long_description=file: README_pypi.md
long_description_content_type=text/markdown

classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[flake8]
ignore=F811,W503,W504  # ignore overload redefinition, allow line breaks before/after binary operators

[isort]
multi_line_output=3
include_trailing_comma=True
skip=.gitignore,__init__.py
